objects/vlocity_cmt__OrchestrationPlanDefinition__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
                <value>
                    <fullName>Main Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShowOrder__c</fullName>
        <label>Show Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Orchestration Plan Definition</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Orchestration Plan Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Plan Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__ShowOrderValidation</fullName>
        <active>true</active>
        <description>Disallow negative values for show order field</description>
        <errorConditionFormula>vlocity_cmt__ShowOrder__c &lt; 0</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ShowOrder__c</errorDisplayField>
        <errorMessage>Show Order cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>